tests/ui/swap.stderr
error: this looks like you are swapping elements of `foo` manually
  --> $DIR/swap.rs:11:5
   |
11 | /     let temp = foo[0];
12 | |     foo[0] = foo[1];
13 | |     foo[1] = temp;
   | |_________________^
   |
   = note: #[deny(manual_swap)] implied by #[deny(clippy)]
note: lint level defined here
  --> $DIR/swap.rs:4:9
   |
4  | #![deny(clippy)]
   |         ^^^^^^
help: try
   |     foo.swap(0, 1);

error: this looks like you are swapping elements of `foo` manually
  --> $DIR/swap.rs:23:5
   |
23 | /     let temp = foo[0];
24 | |     foo[0] = foo[1];
25 | |     foo[1] = temp;
   | |_________________^
   |
   = note: #[deny(manual_swap)] implied by #[deny(clippy)]
help: try
   |     foo.swap(0, 1);

error: this looks like you are swapping elements of `foo` manually
  --> $DIR/swap.rs:35:5
   |
35 | /     let temp = foo[0];
36 | |     foo[0] = foo[1];
37 | |     foo[1] = temp;
   | |_________________^
   |
   = note: #[deny(manual_swap)] implied by #[deny(clippy)]
help: try
   |     foo.swap(0, 1);

error: this looks like you are swapping `a` and `b` manually
  --> $DIR/swap.rs:60:7
   |
60 |       ; let t = a;
   |  _______^
61 | |     a = b;
62 | |     b = t;
   | |_________^
   |
   = note: #[deny(manual_swap)] implied by #[deny(clippy)]
help: try
   |     ; std::mem::swap(&mut a, &mut b);
   = note: or maybe you should use `std::mem::replace`?

error: this looks like you are swapping `c.0` and `a` manually
  --> $DIR/swap.rs:77:7
   |
77 |       ; let t = c.0;
   |  _______^
78 | |     c.0 = a;
79 | |     a = t;
   | |_________^
   |
   = note: #[deny(manual_swap)] implied by #[deny(clippy)]
help: try
   |     ; std::mem::swap(&mut c.0, &mut a);
   = note: or maybe you should use `std::mem::replace`?

error: this looks like you are trying to swap `a` and `b`
  --> $DIR/swap.rs:53:5
   |
53 | /     a = b;
54 | |     b = a;
   | |_________^
   |
   = note: #[deny(almost_swapped)] implied by #[deny(clippy)]
note: lint level defined here
  --> $DIR/swap.rs:4:9
   |
4  | #![deny(clippy)]
   |         ^^^^^^
help: try
   |     std::mem::swap(&mut a, &mut b);
   = note: or maybe you should use `std::mem::replace`?

error: this looks like you are trying to swap `c.0` and `a`
  --> $DIR/swap.rs:70:5
   |
70 | /     c.0 = a;
71 | |     a = c.0;
   | |___________^
   |
   = note: #[deny(almost_swapped)] implied by #[deny(clippy)]
help: try
   |     std::mem::swap(&mut c.0, &mut a);
   = note: or maybe you should use `std::mem::replace`?

error: aborting due to 7 previous errors

